Refine "repository" object

--- a/package.json
+++ b/package.json
@@ -76,6 +76,9 @@
     "test": "jest",
     "postinstall": "patch-package"
   },
-  "repository": "https://github.com/latextemplates/generator-latex-template.git",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/latextemplates/generator-latex-template.git"
+  },
   "license": "0BSD"
 }
