--- a/.github/workflows/check-make.yml
+++ b/.github/workflows/check-make.yml
@@ -64,14 +64,23 @@ jobs:
       - run: npm ci
         working-directory: ${{ github.workspace }}/code
       - run: npm install -g yo
+      - run: mkdir /tmp/gen
       - name: Create lncs-reitzig
         run: yo ${{ github.workspace }}/code/generators/app/index.js --documentclass=lncs --papersize=a4 --latexcompiler=pdflatex --bibtextool=bibtex --texlive=2024 --docker=reitzig --overleaf=no --lang=en --font=default --listings=minted --enquotes=csquotes --tweakouterquote=babel --todo=pdfcomment --examples=true --howtotext=true
+        working-directory: /tmp/gen
       - name: Install TeX Live
         uses: zauguin/install-texlive@v3
         with:
-          package_file: '${{ github.workspace }}/Texlivefile'
+          package_file: '/tmp/gen/Texlivefile'
       - run: make pdf
+        working-directory: /tmp/gen
+      - uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: state
+          path: /tmp/gen
       - name: Prepare output of diff
+        working-directory: /tmp/gen
         run: |
           git init
           git add .
@@ -81,6 +90,7 @@ jobs:
           version: 1.0
           execute_install_scripts: true
       - run: make format
-        # Additional check - more than the make target itself
+      # Additional check - more than the make target itself
       - name: No changes made by latexindent
+        working-directory: /tmp/gen
         run: git diff --exit-code
