--- a/.github/workflows/check-make.yml
+++ b/.github/workflows/check-make.yml
@@ -77,7 +77,7 @@ jobs:
           set -e
           cd /tmp
           PRETEST_URL=$(wget -qO- https://zauguin.github.io/texlive-mirrors/us | head -n1)
-          wget $PRETEST_URL/update-tlmgr-latest.sh
+          wget -q $PRETEST_URL/update-tlmgr-latest.sh
           sh ./update-tlmgr-latest.sh
           tlmgr option repo $PRETEST_URL
           tlmgr update --self
