--- a/.github/workflows/check-make.yml
+++ b/.github/workflows/check-make.yml
@@ -76,7 +76,8 @@ jobs:
         run: |
           set -e
           cd /tmp
-          PRETEST_URL=$(wget -qO- https://zauguin.github.io/texlive-mirrors/us | head -n1)
+          # Source: https://www.tug.org/texlive/mirmon/
+          PRETEST_URL=https://www.math.utah.edu/pub/tlpretest/
           wget -q $PRETEST_URL/update-tlmgr-latest.sh
           sh ./update-tlmgr-latest.sh
           tlmgr option repo $PRETEST_URL
