Try other mirror

--- a/.github/workflows/check-make.yml
+++ b/.github/workflows/check-make.yml
@@ -77,7 +77,9 @@ jobs:
           set -e
           cd /tmp
           # Source: https://www.tug.org/texlive/mirmon/
-          PRETEST_URL=https://www.math.utah.edu/pub/tlpretest/
+          # too old
+          # PRETEST_URL=https://www.math.utah.edu/pub/tlpretest/
+          PRETEST_URL=http://ftp.cstug.cz/pub/tex/local/tlpretest/
           wget -q $PRETEST_URL/update-tlmgr-latest.sh
           sh ./update-tlmgr-latest.sh
           tlmgr option repo $PRETEST_URL
