--- a/.github/workflows/check-make.yml
+++ b/.github/workflows/check-make.yml
@@ -83,8 +83,8 @@ jobs:
           wget -q $PRETEST_URL/update-tlmgr-latest.sh
           sh ./update-tlmgr-latest.sh
           tlmgr option repo $PRETEST_URL
-          tlmgr update --self
-          tlmgr update --all
+          tlmgr update --self --force
+          tlmgr update --all --force
       - run: make pdf
         working-directory: /tmp/gen
       - uses: actions/upload-artifact@v4
