--- a/.github/workflows/check-make.yml
+++ b/.github/workflows/check-make.yml
@@ -73,6 +73,7 @@ jobs:
         with:
           package_file: '/tmp/gen/Texlivefile'
           repository: https://www.math.utah.edu/pub/tlpretest/
+          cache_version: 2
       - run: make pdf
         working-directory: /tmp/gen
       - uses: actions/upload-artifact@v4
