mirror is http only

--- a/.github/workflows/check-make.yml
+++ b/.github/workflows/check-make.yml
@@ -72,7 +72,7 @@ jobs:
         uses: zauguin/install-texlive@v3
         with:
           package_file: '/tmp/gen/Texlivefile'
-          repository: https://www.math.utah.edu/pub/tlpretest/
+          repository: http://ftp.math.utah.edu/pub/tlpretest/
           cache_version: 2
       - run: make pdf
         working-directory: /tmp/gen
