Fix path for check make

--- a/.github/workflows/check-make.yml
+++ b/.github/workflows/check-make.yml
@@ -92,6 +92,7 @@ jobs:
           version: 1.0
           execute_install_scripts: true
       - run: make format
+        working-directory: /tmp/gen
       # Additional check - more than the make target itself
       - name: No changes made by latexindent
         working-directory: /tmp/gen
