--- a/.github/workflows/check-make.yml
+++ b/.github/workflows/check-make.yml
@@ -72,6 +72,8 @@ jobs:
         uses: zauguin/install-texlive@v3
         with:
           package_file: '/tmp/gen/Texlivefile'
+          # repository: http://ftp.math.utah.edu/pub/tlpretest/
+          # cache_version: 2
       - run: make pdf
         working-directory: /tmp/gen
       - uses: actions/upload-artifact@v4
@@ -90,6 +92,7 @@ jobs:
           version: 1.0
           execute_install_scripts: true
       - run: make format
+        working-directory: /tmp/gen
       # Additional check - more than the make target itself
       - name: No changes made by latexindent
         working-directory: /tmp/gen
