Switch to Pretest TeX Live

--- a/.github/workflows/check-make.yml
+++ b/.github/workflows/check-make.yml
@@ -72,8 +72,8 @@ jobs:
         uses: zauguin/install-texlive@v3
         with:
           package_file: '/tmp/gen/Texlivefile'
-          # repository: http://ftp.math.utah.edu/pub/tlpretest/
-          # cache_version: 2
+          repository: http://ftp.math.utah.edu/pub/tlpretest/
+          cache_version: 2
       - run: make pdf
         working-directory: /tmp/gen
       - uses: actions/upload-artifact@v4
