--- a/generators/app/templates/.github/workflows/check.yml
+++ b/generators/app/templates/.github/workflows/check.yml
@@ -61,9 +61,10 @@ jobs:
       - name: Set up Git repository
         uses: actions/checkout@v4
       - name: Install TeX Live
-        uses: zauguin/install-texlive@v3
+        uses: zauguin/install-texlive@v4
         with:
           package_file: '${{ github.workspace }}/Texlivefile'
+          texlive_version: <%= texlive %>
       - name: Count words
         run: |
           texcount -utf8 -inc <%= filenames.main %>.tex > texcount.txt
@@ -137,9 +138,10 @@ jobs:
           version: 1.0
           execute_install_scripts: true
       - name: Install latexindent
-        uses: zauguin/install-texlive@v3
+        uses: zauguin/install-texlive@v4
         with:
           packages: latexindent
+          texlive_version: <%= texlive %>
       - run: make format
       - name: No changes made by latexindent
         run: git diff --exit-code
