Make workflow name more consistent

--- a/generators/app/templates/.github/workflows/check.yml
+++ b/generators/app/templates/.github/workflows/check.yml
@@ -9,7 +9,7 @@ concurrency:
   cancel-in-progress: true
 jobs:
   pdf:
-    name: latexmk <%= filenames.main %>
+    name: pdf (latexmk <%= filenames.main %>)
     runs-on: ubuntu-latest
     steps:
       - name: Set up Git repository
