--- a/generators/app/templates/.github/workflows/check.yml
+++ b/generators/app/templates/.github/workflows/check.yml
@@ -30,7 +30,7 @@ jobs:
 <% if (githubpublish || (lang == "en") && (reallatexcompiler == "lualatex")) { -%>
 
       # Highlight mis-spelled words in the PDF
-      - uses: bscott-zebra/cache-apt-pkgs-action@avoid_using_xargs
+      - uses: awalsh128/cache-apt-pkgs-action@latest
         with:
           packages: aspell aspell-en<% if (githubpublish || (language == 'de')) { %> aspell-de<% } %>
           version: 1.0
