Also store .fls

--- a/generators/app/templates/.github/workflows/check.yml
+++ b/generators/app/templates/.github/workflows/check.yml
@@ -55,6 +55,7 @@ jobs:
           path: |
             <%= filenames.main %>.pdf
             <%= filenames.main %>.log
+            <%= filenames.main %>.fls
   word-count:
     runs-on: ubuntu-latest
     steps:
