--- a/.github/workflows/check-make.yml
+++ b/.github/workflows/check-make.yml
@@ -69,11 +69,10 @@ jobs:
         run: yo ${{ github.workspace }}/code/generators/app/index.js --documentclass=lncs --papersize=a4 --latexcompiler=pdflatex --bibtextool=bibtex --texlive=2024 --docker=reitzig --overleaf=no --lang=en --font=default --listings=minted --enquotes=csquotes --tweakouterquote=babel --todo=pdfcomment --examples=true --howtotext=true
         working-directory: /tmp/gen
       - name: Install TeX Live
-        uses: zauguin/install-texlive@v3
+        uses: zauguin/install-texlive@v4
         with:
           package_file: '/tmp/gen/Texlivefile'
-          # repository: http://ftp.math.utah.edu/pub/tlpretest/
-          # cache_version: 2
+          texlive_version: 2025
       - run: make pdf
         working-directory: /tmp/gen
       - uses: actions/upload-artifact@v4
