--- a/generators/app/templates/.github/workflows/check.yml
+++ b/generators/app/templates/.github/workflows/check.yml
@@ -9,7 +9,7 @@ concurrency:
   cancel-in-progress: true
 jobs:
   pdf:
-    name: latexmk <%= filenames.main %>
+    name: pdf (latexmk <%= filenames.main %>)
     runs-on: ubuntu-latest
     steps:
       - name: Set up Git repository
@@ -30,7 +30,7 @@ jobs:
 <% if (githubpublish || (lang == "en") && (reallatexcompiler == "lualatex")) { -%>
 
       # Highlight mis-spelled words in the PDF
-      - uses: bscott-zebra/cache-apt-pkgs-action@avoid_using_xargs
+      - uses: awalsh128/cache-apt-pkgs-action@latest
         with:
           packages: aspell aspell-en<% if (githubpublish || (language == 'de')) { %> aspell-de<% } %>
           version: 1.0
@@ -55,15 +55,17 @@ jobs:
           path: |
             <%= filenames.main %>.pdf
             <%= filenames.main %>.log
+            <%= filenames.main %>.fls
   word-count:
     runs-on: ubuntu-latest
     steps:
       - name: Set up Git repository
         uses: actions/checkout@v4
       - name: Install TeX Live
-        uses: zauguin/install-texlive@v3
+        uses: zauguin/install-texlive@v4
         with:
           package_file: '${{ github.workspace }}/Texlivefile'
+          texlive_version: <%= texlive %>
       - name: Count words
         run: |
           texcount -utf8 -inc <%= filenames.main %>.tex > texcount.txt
@@ -137,9 +139,10 @@ jobs:
           version: 1.0
           execute_install_scripts: true
       - name: Install latexindent
-        uses: zauguin/install-texlive@v3
+        uses: zauguin/install-texlive@v4
         with:
           packages: latexindent
+          texlive_version: <%= texlive %>
       - run: make format
       - name: No changes made by latexindent
         run: git diff --exit-code
