--- a/generators/app/templates/.github/workflows/check.yml
+++ b/generators/app/templates/.github/workflows/check.yml
@@ -27,7 +27,7 @@ jobs:
             cp "_latexmkrc" "latexmkrc"
           fi
       - run: latexmk <%= filenames.main %>
-<% if (githubpublish || (lang == "en") && (reallatexcompiler == "lualatex")) { -%>
+<% if (githubpublish || (lang == "en") && (reallatexcompiler.startsWith("lualatex"))) { -%>
 
       # Highlight mis-spelled words in the PDF
       - uses: awalsh128/cache-apt-pkgs-action@latest
