--- a/.github/workflows/check-lncs-lualatex-dev-bibtex-2025-true.yml
+++ b/.github/workflows/check-lncs-lualatex-dev-bibtex-2025-true.yml
@@ -2756,7 +2756,7 @@ jobs:
         run: |
           echo "## $CURRENT_VARIANT" >> $GITHUB_STEP_SUMMARY
           echo '```' >> $GITHUB_STEP_SUMMARY
-          texlogsieve < $CURRENT_VARIANT_SHORT/*.log >> $GITHUB_STEP_SUMMARY || false
+          texlogsieve $CURRENT_VARIANT_SHORT/*.log >> $GITHUB_STEP_SUMMARY || false
           echo '```' >> $GITHUB_STEP_SUMMARY
       - id: failing_u
         if: failure()
