--- a/.github/workflows/check-ustutt-pdflatex-biblatex-2024-false.yml
+++ b/.github/workflows/check-ustutt-pdflatex-biblatex-2024-false.yml
@@ -2756,7 +2756,7 @@ jobs:
         run: |
           echo "## $CURRENT_VARIANT" >> $GITHUB_STEP_SUMMARY
           echo '```' >> $GITHUB_STEP_SUMMARY
-          texlogsieve < $CURRENT_VARIANT_SHORT/*.log >> $GITHUB_STEP_SUMMARY || false
+          texlogsieve $CURRENT_VARIANT_SHORT/*.log >> $GITHUB_STEP_SUMMARY || false
           echo '```' >> $GITHUB_STEP_SUMMARY
       - id: failing_u
         if: failure()
