--- a/generators/app/templates/.github/workflows/check.yml
+++ b/generators/app/templates/.github/workflows/check.yml
@@ -35,11 +35,24 @@ jobs:
           packages: aspell aspell-en<% if (githubpublish || (language == 'de')) { %> aspell-de<% } %>
           version: 1.0
           execute_install_scripts: true
+      - name: post-setup aspell
+        # refs https://github.com/awalsh128/cache-apt-pkgs-action/issues/157
+        run: |
+          sudo apt-get install -y aspell-en<% if (githubpublish || (language == 'de')) { %> aspell-de<% } %>
       - name: aspell
         run: |
           for tex in $(ls *.tex content/*.tex 2>/dev/null); do
+            if [[ "<%= language %>" == "de" && "$tex" == thesis-example* ]]; then
+              continue
+            fi
+
             # The lualatex package "spelling" requires the content to be in a file ending with ".spell.bad"
-            aspell --mode=tex <% if (language == 'de') { %>-l de_DE --run-together<% } else { %>-l en_US<% } %> --encoding=utf-8 --conf=./.aspell.conf -p ./.aspell.en.pws list < $tex | sort | uniq >> <%= filenames.main %>.spell.bad
+            aspell --mode=tex\
+              <% if (language == 'de') { %>-l de_DE --run-together<% } else { %>-l en_US<% } %>\
+              --encoding=utf-8\
+              --conf=./.aspell.conf\
+              -p ./.aspell.<%= language %>.pws list\
+              < $tex | sort | uniq >> <%= filenames.main %>.spell.bad
           done
       - run: latexmk <%= filenames.main %>
 
@@ -104,7 +117,10 @@ jobs:
           packages: aspell aspell-en<% if (githubpublish || (language == 'de')) { %> aspell-de<% } %>
           version: 1.0
           execute_install_scripts: true
-
+      - name: post-setup aspell
+        # refs https://github.com/awalsh128/cache-apt-pkgs-action/issues/157
+        run: |
+          sudo apt-get install -y aspell-en<% if (githubpublish || (language == 'de')) { %> aspell-de<% } %>
       - name: aspell
         run: |
           echo "| file | status |" >> $GITHUB_STEP_SUMMARY
@@ -112,7 +128,7 @@ jobs:
           failure=0
           for tex in $(ls *.tex content/*.tex 2>/dev/null); do
             # Words are output in the order they appear in the document
-            words=$(aspell --mode=tex <% if (language == 'de') { %>-l de_DE --run-together<% } else { %>-l en_US<% } %> --encoding=utf-8 --conf=./.aspell.conf -p ./.aspell.en.pws list < $tex | tr '\n' ' ')
+            words=$(aspell --mode=tex <% if (language == 'de') { %>-l de_DE --run-together<% } else { %>-l en_US<% } %> --encoding=utf-8 --conf=./.aspell.conf -p ./.aspell.<%= language %>.pws list < $tex | tr '\n' ' ')
             if [ -z "$words" ]; then
               echo "| $tex | ✅ |" >> $GITHUB_STEP_SUMMARY
             else
@@ -124,7 +140,7 @@ jobs:
           done
           if [[ "$failure" -eq 1 ]]; then
              echo "" >> $GITHUB_STEP_SUMMARY
-             echo 'If you want to ignore words, add them to `.aspell.en.pws` (your personal aspell dictionary)' >> $GITHUB_STEP_SUMMARY
+             echo 'If you want to ignore words, add them to `.aspell.<%= language %>.pws` (your personal aspell dictionary)' >> $GITHUB_STEP_SUMMARY
             exit 1
           fi
   indent:
