--- a/generators/app/templates/.github/workflows/check.yml
+++ b/generators/app/templates/.github/workflows/check.yml
@@ -27,7 +27,7 @@ jobs:
             cp "_latexmkrc" "latexmkrc"
           fi
       - run: latexmk <%= filenames.main %>
-<% if (githubpublish || (lang == "en") && (reallatexcompiler == "lualatex")) { -%>
+<% if (githubpublish || (lang == "en") && (reallatexcompiler.startsWith("lualatex"))) { -%>
 
       # Highlight mis-spelled words in the PDF
       - uses: awalsh128/cache-apt-pkgs-action@latest
@@ -35,18 +35,31 @@ jobs:
           packages: aspell aspell-en<% if (githubpublish || (language == 'de')) { %> aspell-de<% } %>
           version: 1.0
           execute_install_scripts: true
+      - name: post-setup aspell
+        # refs https://github.com/awalsh128/cache-apt-pkgs-action/issues/157
+        run: |
+          sudo apt-get install -y aspell-en<% if (githubpublish || (language == 'de')) { %> aspell-de<% } %>
       - name: aspell
         run: |
           for tex in $(ls *.tex content/*.tex 2>/dev/null); do
+            if [[ "<%= language %>" == "de" && "$tex" == thesis-example* ]]; then
+              continue
+            fi
+
             # The lualatex package "spelling" requires the content to be in a file ending with ".spell.bad"
-            aspell --mode=tex <% if (language == 'de') { %>-l de_DE --run-together<% } else { %>-l en_US<% } %> --encoding=utf-8 --conf=./.aspell.conf -p ./.aspell.en.pws list < $tex | sort | uniq >> <%= filenames.main %>.spell.bad
+            aspell --mode=tex\
+              <% if (language == 'de') { %>-l de_DE --run-together<% } else { %>-l en_US<% } %>\
+              --encoding=utf-8\
+              --conf=./.aspell.conf\
+              -p ./.aspell.<%= language %>.pws list\
+              < $tex | sort | uniq >> <%= filenames.main %>.spell.bad
           done
       - run: latexmk <%= filenames.main %>
 
       - name: Job summary using texlogsieve
         run: |
           echo '```' >> $GITHUB_STEP_SUMMARY
-          texlogsieve < <%= filenames.main %>.log >> $GITHUB_STEP_SUMMARY || true
+          texlogsieve <%= filenames.main %>.log | tee -a "$GITHUB_STEP_SUMMARY" || true
           echo '```' >> $GITHUB_STEP_SUMMARY
 <% } -%>
       - uses: actions/upload-artifact@v4
@@ -99,21 +112,29 @@ jobs:
 
       # Original action does not work well - see https://github.com/awalsh128/cache-apt-pkgs-action/pull/136
       # The action is not updated - and thus the dictionaries are not updated
-      - uses: bscott-zebra/cache-apt-pkgs-action@avoid_using_xargs
+      - uses: awalsh128/cache-apt-pkgs-action@latest
         with:
-          packages: aspell aspell-en<% if (language == 'de') { %> aspell-de<% } %>
+          packages: aspell aspell-en<% if (githubpublish || (language == 'de')) { %> aspell-de<% } %>
           version: 1.0
           execute_install_scripts: true
-
+      - name: post-setup aspell
+        # refs https://github.com/awalsh128/cache-apt-pkgs-action/issues/157
+        run: |
+          sudo apt-get install -y aspell-en<% if (githubpublish || (language == 'de')) { %> aspell-de<% } %>
       - name: aspell
         run: |
           echo "| file | status |" >> $GITHUB_STEP_SUMMARY
           echo "| -- | -- |" >> $GITHUB_STEP_SUMMARY
           failure=0
           for tex in $(ls *.tex content/*.tex 2>/dev/null); do
-            # One could add a personal dictionary using --personal=.aspell.en.pws
+            if [[ "<%= language %>" == "de" && "$tex" == thesis-example* ]]; then
+              echo "$tex skipped"
+              continue
+            fi
+            echo "Checking $tex..."
+
             # Words are output in the order they appear in the document
-            words=$(aspell --mode=tex <% if (language == 'de') { %>-l de_DE --run-together<% } else { %>-l en_US<% } %> --encoding=utf-8 --conf=./.aspell.conf -p ./.aspell.en.pws list < $tex | tr '\n' ' ')
+            words=$(aspell --mode=tex <% if (language == 'de') { %>-l de_DE --run-together<% } else { %>-l en_US<% } %> --encoding=utf-8 --conf=./.aspell.conf -p ./.aspell.<%= language %>.pws list < $tex | tr '\n' ' ')
             if [ -z "$words" ]; then
               echo "| $tex | ✅ |" >> $GITHUB_STEP_SUMMARY
             else
@@ -125,7 +146,7 @@ jobs:
           done
           if [[ "$failure" -eq 1 ]]; then
              echo "" >> $GITHUB_STEP_SUMMARY
-             echo "If you want to ignore words, add them to `.aspell.en.pws` (your personal aspell dictionary)"
+             echo 'If you want to ignore words, add them to `.aspell.<%= language %>.pws` (your personal aspell dictionary)' >> $GITHUB_STEP_SUMMARY
             exit 1
           fi
   indent:
@@ -133,7 +154,7 @@ jobs:
     steps:
       - name: Set up Git repository
         uses: actions/checkout@v4
-      - uses: bscott-zebra/cache-apt-pkgs-action@avoid_using_xargs
+      - uses: awalsh128/cache-apt-pkgs-action@latest
         with:
           packages: libyaml-tiny-perl libfile-homedir-perl
           version: 1.0
