Add version output to texlogsieve

--- a/generators/app/templates/.github/workflows/check.yml
+++ b/generators/app/templates/.github/workflows/check.yml
@@ -58,6 +58,8 @@ jobs:
 
       - name: Job summary using texlogsieve
         run: |
+          texlogsieve --version | head -n 1
+
           echo '```' >> $GITHUB_STEP_SUMMARY
           texlogsieve <%= filenames.main %>.log | tee -a "$GITHUB_STEP_SUMMARY" || true
           echo '```' >> $GITHUB_STEP_SUMMARY
