--- a/generators/app/templates/.github/workflows/check.yml
+++ b/generators/app/templates/.github/workflows/check.yml
@@ -15,9 +15,10 @@ jobs:
       - name: Set up Git repository
         uses: actions/checkout@v4
       - name: Install TeX Live
-        uses: zauguin/install-texlive@v3
+        uses: zauguin/install-texlive@v4
         with:
           package_file: '${{ github.workspace }}/Texlivefile'
+          texlive_version: <%= texlive %>
       - name: Prepare latexmk
         run: |
           updmap -sys
