--- a/generators/app/templates/Dockerfile.dante
+++ b/generators/app/templates/Dockerfile.dante
@@ -1,6 +1,7 @@
 FROM danteev/texlive:<% switch (texlive) {
-  case 2024: %>edge<% break;
-  case 2023: %>edge<% break;
+  case 2025: %>edge<% break;
+  case 2024: %>2024-B<% break;
+  case 2023: %>2023-A<% break;
   // 2022 does not exist - see https://github.com/dante-ev/docker-texlive/blob/main/CHANGELOG.md
   case 2021: %>2021-D<% break;
 } -%>
