Disable aspell for scientific-thesis

--- a/generators/app/templates/.github/workflows/check.yml
+++ b/generators/app/templates/.github/workflows/check.yml
@@ -44,6 +44,10 @@ jobs:
         run: |
           sudo apt-get install -y aspell-en<% if (githubpublish || (language == 'de')) { %> aspell-de<% } %>
       - name: aspell
+<% if (githubpublish && (documentclass === "scientific-thesis")) { -%>
+        # Needs more adaption for scientific thesis; therefore disabled
+        if: false
+<% } -%>
         run: |
           for tex in $(ls *.tex content/*.tex 2>/dev/null); do
             if [[ "<%= language %>" == "de" && "$tex" == thesis-example* ]]; then
