--- a/generators/app/templates/.github/workflows/check.yml
+++ b/generators/app/templates/.github/workflows/check.yml
@@ -46,7 +46,7 @@ jobs:
       - name: aspell
 <% if (githubpublish && (documentclass === "scientific-thesis")) { -%>
         # Needs more adaption for scientific thesis; therefore disabled
-        if: false
+        if: false()
 <% } -%>
         run: |
           for tex in $(ls *.tex content/*.tex 2>/dev/null); do
